deleting, exceptions, simplifying
- DELETE endpoint
- added @Builder from Lombok
- debugged JSON output
- stream()
- beautifying