@@ -2,23 +2,24 @@ package com.recrutTask.swift_api.services;
 
 import com.opencsv.bean.CsvToBeanBuilder;
 import com.recrutTask.swift_api.models.BankEntity;
+import com.recrutTask.swift_api.models.Country;
 import com.recrutTask.swift_api.repositories.SwiftCodeRepository;
 import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.http.ResponseEntity;
+import org.springframework.http.HttpStatus;
+import org.springframework.http.converter.HttpMessageNotReadableException;
 import org.springframework.stereotype.Service;
+import org.springframework.web.server.ResponseStatusException;
 
 import java.io.FileNotFoundException;
 import java.io.FileReader;
-import java.io.IOException;
-import java.util.ArrayList;
 import java.util.List;
+import java.util.Map;
 import java.util.stream.Collectors;
 
 @Service
 public class DataService {
     @Autowired
     SwiftCodeRepository repository;
-
 
     public List<BankEntity> uploadDatabaseFromLocalFile(){
         List<BankEntity> listOfBankEntities = allBankEntitiesFromCsvToList
@@ -27,7 +28,8 @@ public class DataService {
     }
 
     public List<BankEntity> uploadDatabaseFromCsvFileLocalPath(String filePath){
-        return allBankEntitiesFromCsvToList(filePath);
+        List<BankEntity> listOfBankEntities = allBankEntitiesFromCsvToList(filePath);
+        return saveAllBankEntitiesFromListToDatabase(listOfBankEntities);
     }
 
     private List<BankEntity> allBankEntitiesFromCsvToList(String csvFilePath) {
@@ -43,9 +45,7 @@ public class DataService {
         }
     }
 
-
-    public List<BankEntity> saveAllBankEntitiesFromListToDatabase(List<BankEntity> bankEntities){
-
+    private List<BankEntity> saveAllBankEntitiesFromListToDatabase(List<BankEntity> bankEntities){
         return bankEntities.stream()
                 .peek(bankEntity -> {
                     String swiftCode = bankEntity.getSwiftCode();
@@ -56,57 +56,89 @@ public class DataService {
                 .collect(Collectors.toList());
     }
 
-    private void trimWhiteSpaces(BankEntity bankEntity){
+    public BankEntity getBankEntityBySwiftCode(String swiftCode) {
+        BankEntity foundBank = repository.findById(swiftCode).get();
+        boolean isHeadquarterValue = calculateIsHeadquarter(foundBank.getSwiftCode());
+        List<BankEntity> branches;
+        if (isHeadquarterValue) {
+            branches = findAllBranchesByHeadquarterSwiftCode(swiftCode);
+        } else branches = null;
 
+        return BankEntity.builder()
+                .address(foundBank.getAddress())
+                .bankName(foundBank.getBankName())
+                .countryISO2(foundBank.getCountryISO2())
+                .countryName(foundBank.getCountryName())
+                .isHeadquarter(isHeadquarterValue)
+                .swiftCode(foundBank.getSwiftCode())
+                .branches(branches)
+                .build();
+    }
+
+    private void trimWhiteSpaces(BankEntity bankEntity){
         bankEntity.setAddress(bankEntity.getAddress().trim());
     }
 
     public boolean calculateIsHeadquarter(String swiftCode) {
-
         if (swiftCode != null && swiftCode.length() >= 3) {
             String suffix = swiftCode.substring(swiftCode.length() - 3);
             return "XXX".equals(suffix);
-
         }
         return false;
     }
 
-    public List<BankEntity> findAllBranches (String swiftCode){
-
+    private List<BankEntity> findAllBranchesByHeadquarterSwiftCode (String swiftCode){
         String mainSwiftCodeOfHQ = swiftCode.substring(0, 8);
-
         return repository
                 .findAll()
                 .stream()
                 .filter(bankEntity -> bankEntity.getSwiftCode().substring(0, 8).contains(mainSwiftCodeOfHQ)
                         && !calculateIsHeadquarter(bankEntity.getSwiftCode()))
                 .collect(Collectors.toList());
-
     }
 
-    public List<BankEntity> findAllBranchesByCountryISO2(String countryIso2){
-
-        return repository
+    public Country findAllSwiftCodesWithDetailsByCountryISO2(String countryISO2) throws Exception {
+        List<BankEntity> foundBankEntities = repository
                 .findAll()
                 .stream()
-                .filter(bankEntity -> bankEntity.getCountryISO2().contains(countryIso2))
-                .collect(Collectors.toList());
-    }
+                .filter(bankEntity -> bankEntity.getCountryISO2().contains(countryISO2))
+                .toList();
 
-    public String countryIso2ToName (String countryIso2){
-
-        for (BankEntity bank : repository.findAll()){
-            if(bank.getCountryISO2().contains(countryIso2)){
-                return bank.getCountryName();
-            }
+        if (foundBankEntities.isEmpty()) {
+            throw new Exception("Country with " + countryISO2 + " ISO2 code - not found.");
         }
-        return null;
+
+        return Country.builder()
+                .countryISO2(countryISO2)
+                .countryName(countryIso2ToName(countryISO2))
+                .swiftCodes(foundBankEntities)
+                .build();
     }
 
+    private String countryIso2ToName(String countryIso2) {
+        return repository.findFirstByCountryISO2(countryIso2)
+                .map(BankEntity::getCountryName)
+                .orElse(null);
+    }
 
+    public Map<String,String> addBankEntityToDatabase(BankEntity bankEntity){
+        try {
+            repository.save(bankEntity);
+            return Map.of("message", "SWIFT Code added successfully");
+        }catch (HttpMessageNotReadableException e){
+            return Map.of("message", "Valid data! RequestBody should looks like:\n"+ BankEntity.builder().toString());
+        }
+    }
 
-
-
-
-
+    public Map<String,String> deleteBankEntityFromDatabase(String swiftCode, String bankName, String countryISO2){
+        try {
+            BankEntity foundBank = getBankEntityBySwiftCode(swiftCode);
+            if(foundBank.getBankName().contains(bankName)&&foundBank.getCountryISO2().contains(countryISO2)){
+                repository.deleteById(foundBank.getSwiftCode());
+            }else return Map.of("message", "The data does not match!");
+            return Map.of("message", "SWIFT Code deleted successfully");
+        }catch (Exception exception){
+            throw new ResponseStatusException(HttpStatus.NOT_FOUND, "No bank found with this SWIFT code", exception);
+        }
+    }
 }
